# Lumina

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.copilot/skills/dev/: SKILLS.md
.cursor/skills/smart-commit/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: background-io-uring.instructions.md  research-plan.instructions.md
include/io/: IoRing.hpp
include/network/: LuminaSocket.hpp
src/: main.cpp
